--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p class="tag">Wellness Made Simple</p>
             </div>
             <p>Whether you are scrambling to make time in your schedule or you are simply unmotivated, my passion is to help you reach your goals so that you can give the world your best. I don’t believe in quick fixes  we’ll set realistic goals that suite your lifestyle! Now, let’s get your health back!</p>
-            <p class="signature"><img src=""> - Owner + Wellness Coach</p>
+            <p class="signature"><img src="img/CarrieBeth-Signature.png" alt="Carrie Beth"> - Owner + Wellness Coach</p>
             
             <div class="row challenge">
               <h1>The 6-Week Challenge | <span>3 Payments of $125 or one payment of $300</span></h1>
