ftweaks on mobile respon

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
           <div class="large-3 medium-5 small-12 columns" data-sticky-container>
             <div class="form-wrap sticky" data-sticky data-anchor="main">
-              <h3><b><span>Let's find out if this is</span><br />Right for You:</b></h3>
+              <h3><b><span>Find out if this is</span><br />Right for You:</b></h3>
               <div id="wufoo-z1pdqgju0o6zrjo">
                 Fill out my <a href="https://silverlakestudio.wufoo.com/forms/z1pdqgju0o6zrjo">online form</a>.
               </div>
