tweaking mobile styles and spacing and adding new mobile BG image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             
             <div class="row challenge">
               <div class="challenge-title">
-                <h1>The 6-Week Challenge | <span>3 Payments of $125 or one payment of $300</span></h1>
+                <h1>The 6-Week Challenge&nbsp;| <span>3 Payments of $125 or one payment of $300</span></h1>
               </div>
               <div class="large-3 medium-12 small-12 columns">
                 <div class="primary badge">1</div>
@@ -41,7 +41,8 @@
               </div>
             </div>
             <div class="start">
-              <h3><b>Ready</b> to start your <b>6 Week Challenge?</b><a href="#0" class="button"><b>Let's go!</b></a></h3>
+              <h3><b>Ready</b> to start your <b>6 Week Challenge?</b></h3>
+              <a href="#0" class="button"><h3><b>Let's go!</b></h3></a>
               
             </div>
           </div>
