add link to squareup store

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="start">
               <h3><b>Ready</b> to start your <b>6 Week Challenge?</b></h3>
-              <a href="#0" class="button"><h3><b>Let's go!</b></h3></a>
+              <a href="http://squareup.com/freelifehealth" class="button"><h3><b>Let's go!</b></h3></a>
               
             </div>
           </div>
