--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freelife Health - Wellness Made Simple</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
@@ -19,7 +20,7 @@
               <img src="img/Freelife-Health.png" alt="Freelife Health - Wellness Made Simple">
               <p class="tag">Wellness Made Simple</p>
             </div>
-            <p>Whether you are scrambling to make time in your schedule or you are simply unmotivated, my passion is to help you reach your goals so that you can give the world your best. I don’t believe in quick fixes  we’ll set realistic goals that suite your lifestyle! Now, let’s get your health back!</p>
+            <p>Whether you are scrambling to make time in your schedule or you are simply unmotivated, my passion is to help you reach your goals so that you can give the world your best. I don’t believe in quick fixes - we’ll set realistic goals that suite your lifestyle! Now, let’s get your health back!</p>
             <p class="signature"><img src="img/CarrieBeth-Signature.png" alt="Carrie Beth"> - Owner + Wellness Coach</p>
             
             
