change price in challenge section and line breaking in footer bar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             
             <div class="row challenge">
               <div class="challenge-title">
-                <h1>The 6-Week Challenge&nbsp;| <span>3 Payments of $125 or one payment of $300</span></h1>
+                <h1>The 6-Week Challenge&nbsp;| <span>$175</span></h1>
               </div>
               <div class="large-3 medium-12 small-12 columns">
                 <div class="primary badge">1</div>
@@ -79,7 +79,7 @@
       <div class="background-overlay"></div>
     </div>
     <footer>
-      <p>Freelife Health | Conway, Arkansas | (501) 555-5555</p>
+      <p>Freelife&nbsp;Health | Conway,&nbsp;Arkansas | (501)&nbsp;555&#8209;5555</p>
       <p class="float-right">Site design by <a href="http://silverlakestudio.com" target="_blank"><b>Silverlake Design Studio</b></a></p>
     </footer>
 
