--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
               })(document, 'script');</script>
               <p>Carrie Beth will call or e-mail you within 48 hours.</p>
             </div>
-
           </div>
         </div>
       </div>
@@ -82,7 +81,15 @@
       <p>Freelife&nbsp;Health | Conway,&nbsp;Arkansas | (501)&nbsp;733&#8209;4546</p>
       <p class="float-right">Site design by <a href="http://silverlakestudio.com" target="_blank"><b>Silverlake Design Studio</b></a></p>
     </footer>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+      ga('create', 'UA-90843991-1', 'auto');
+      ga('send', 'pageview');
+    </script>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
